<resources>
    <string name="app_name">SurveyApp</string>
    <string name="fill_the_form">Fill the Form</string>
    <string name="image_sample">image sample</string>
    <string name="weekly_survey_form">Weekly Survey Form</string>
    <string name="this_is_a_weekly_survey_form">This is a weekly survey form.</string>
    <string name="enter_farmer_name">Enter farmer name</string>
    <string name="name">Name</string>
    <string name="after_planting">After Planting</string>
    <string name="before_planting">Before Planting</string>
    <string name="what_is_the_current_status_of_the_plot">What is the current status of the plot?</string>
    <string name="enter_the_farmer_id">Enter the farmer id</string>
    <string name="rice">rice</string>
    <string name="wheat">wheat</string>
    <string name="todo">TODO</string>
    <string name="how_much_time_did_you_irrigate_in_each_day_of_the_week_hours">How much time did you irrigate in each day of the week (hours)?</string>
    <string name="yesterday">Yesterday</string>
    <string name="how_long_did_you_irrigate_each_time_hours">How long did you irrigate each time (hours)?</string>
    <string name="yes">Yes</string>
    <string name="leaf_curling_whole_plant">Leaf curling (whole plant)</string>
    <string name="whatr_kind_of_damage">Whatr kind of damage?</string>
    <string name="no">No</string>
    <string-array name="states">
        <item>Punjab</item>
        <item>Madhya Pradesh</item>
        <item>Haryana</item>
    </string-array>
    <string-array name="district_punjab">
        <item>Amritsar</item>
        <item>Barnala</item>
        <item>Bathinda</item>
        <item>Faridkot</item>
        <item>Fatehgarh Sahib</item>
        <item>Firozpur</item>
        <item>Fazika</item>
        <item>Gurdaspur</item>
        <item>Hoshiarpur</item>
        <item>Jalandhar</item>
        <item>Kapurthala</item>
        <item>Ludhiana</item>
        <item>Mansa</item>
        <item>Moga</item>
        <item>Sri Muktsar Sahib</item>
        <item>Pathankot</item>
        <item>Patiala</item>
        <item>Rupnagar</item>
        <item>Sahibzada Ajit Singh Nagar</item>
        <item>Sangrur</item>
        <item>Shahid Bhagat Singh Nagar</item>
        <item>Taran Taran</item>
    </string-array>
    <string-array name="district_kerala">
        <item>Alappuzha</item>
        <item>Ernakulam</item>
        <item>Idukki</item>
        <item>Kannur</item>
        <item>Kasaragod</item>
        <item>Kollam</item>
        <item>Kottayam</item>
        <item>Kozhikode</item>
        <item>Malappuram</item>
        <item>Palakkad</item>
        <item>Pathanamthitta</item>
        <item>Thiruvananthapuram</item>
        <item>Thrissur</item>
        <item>Wayanad</item>
    </string-array>
    <string-array name="district_ap">
        <item>Chittoor</item>
        <item>Anantapur</item>
        <item>Krishna</item>
        <item>East Godavari</item>
        <item>Vizianagaram</item>
        <item>Visakhapatnam</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Kurnool</item>
        <item>Prakasam</item>
        <item>Nellore</item>
        <item>Srikakulam</item>
        <item>West Godavar</item>
    </string-array>
    <string-array name="crops">
        <item>None</item>
        <item>Cabbage</item>
        <item>Cauliflower</item>
        <item>Chilli</item>
        <item>Creeper</item>
        <item>Eggplant</item>
        <item>Maze (Corn)</item>
        <item>Okra</item>
        <item>Potato</item>
        <item>Pumpkin</item>
        <item>Rice</item>
        <item>Tomato</item>
        <item>Groundnuts</item>
        <item>Wheat</item>
        <item>Other</item>
    </string-array>
    <string name="please_take_a_picture_of_your_farm_the_location_of_your_farm_would_be_retrieved_automatically">Please take a picture of your farm. The location of your farm would be retrieved automatically.</string>
</resources>