<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Did you have any kind of damage to the crop this week?" />

        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whatr_kind_of_damage" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leaf_curling_whole_plant" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Leaf curling (lower leaves)" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Leaf curling (upper leaves)" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fruit borer" />

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Other" />

        </RadioGroup>

        <EditText
            android:id="@+id/editText10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Please Specify"
            android:inputType="textPersonName"
            tools:visibility="gone" />

        <EditText
            android:id="@+id/crop10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="crop damage number" />

        <EditText
            android:id="@+id/crop11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="crop damage note" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>