<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_much_time_did_you_irrigate_in_each_day_of_the_week_hours"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/yesterday"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="2 days ago"
            android:inputType="textPersonName"
           />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="3 days ago"
            android:inputType="textPersonName"
             />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="4 days ago"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="5 days ago"
            android:inputType="textPersonName"
           />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="6 days ago"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/editTextTextPersonName7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="7 days ago"
            android:inputType="textPersonName"
           />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="On which days did you irrigate the plot this week?"
            android:textStyle="bold" />

        <com.dpro.widgets.WeekdaysPicker
            android:id="@+id/weekdays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2sp"
            app:sunday_first_day="false"
            app:weekend_text_color="@color/white"
            app:weekenddarker="true" />

        <EditText
            android:id="@+id/editTextTextPersonName8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/how_long_did_you_irrigate_each_time_hours"
            android:inputType="textPersonName"
           />

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="How much have you paid for water this week? (If you didn't pay, enter 0)"
            android:inputType="textPersonName"
           />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>